--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,10 +1,14 @@
 doctype html
 html(lang="en")
     head
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Investing Calendar
     body 
-        h1 It works!
+        header
+            h1 It works!
+        main
+            h2 Welcome to Calendar
         script(src='/public/js/app.js')
